Enhanced Search query SPARQL endpoint for broader and narrower terms
DUKEMS-109